# firebird_ros

./: CMakeLists.txt  README.md  package.xml
embedded/: avrdude_script.sh  rosserial_firebird.ino.hex
embedded/ros_lib/arbotix_msgs/: Analog.h  Digital.h  Enable.h  SetSpeed.h  SetupChannel.h
embedded/ros_lib/concert_msgs/: AllocateSoftware.h  ConcertClient.h  ConcertClientState.h  ConcertClients.h  ConductorGraph.h  EnableService.h  ErrorCodes.h  LinkConnection.h  LinkEdge.h  LinkGraph.h  LinkNode.h  ServiceProfile.h  Services.h  SoftwareInstance.h  SoftwareInstances.h  SoftwareProfile.h  SoftwareProfiles.h  Strings.h  UpdateServiceConfig.h
embedded/ros_lib/concert_service_msgs/: CaptureResourcePair.h  CaptureResourcePairRequest.h  CaptureResourcePairResponse.h  CaptureResourceRequest.h  CaptureResourceResponse.h  KillTurtlePair.h  KillTurtlePairRequest.h  KillTurtlePairResponse.h  KillTurtleRequest.h  KillTurtleResponse.h  SpawnTurtlePair.h  SpawnTurtlePairRequest.h  SpawnTurtlePairResponse.h  SpawnTurtleRequest.h  SpawnTurtleResponse.h
embedded/ros_lib/firebird/: Aux.h  Battery.h  IR.h  Lcd.h  Sensor.h  Sharp.h  WLS.h
embedded/ros_lib/household_objects_database_msgs/: DatabaseModelPose.h  DatabaseModelPoseList.h  DatabaseReturnCode.h  DatabaseScan.h  GetModelDescription.h  GetModelList.h  GetModelMesh.h  GetModelScans.h  SaveScan.h  TranslateRecognitionId.h
embedded/rosserial_firebird/: LCD.c  firebird.c  rosserial_firebird.ino
launch/: firebird.launch
msg/: Aux.msg  Battery.msg  IR.msg  Lcd.msg  Sensor.msg  Sharp.msg  WLS.msg
scripts/: firebird_test.py
(+119 files in other folders)
