<?xml version="1.0"?>
<package format="2">
  <name>firebird</name>
  <version>0.0.0</version>
  <description>The firebird package</description>

  <maintainer email="badrobot161@gmail.com">vikrant</maintainer>

  <license>BSD</license>


  <url type="website">https://github.com/badrobot15/firebird_ros</url>


  <author email="badrobot161@gmail.com">Vikrant Fernandes</author>


  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
